src/delish.yy.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 60
#line 1 "./src/delish.leg"

#include "delikind.h"


#undef YY_INPUT
#define YY_INPUT(b,r,s) readYYInput(b,&r,s)

const char *yyDeliScript;
size_t yyReadOffset;
int yyDeliScriptLen;

void yySetScript( char *cstr )
{
	yyDeliScript = cstr;
	yyDeliScriptLen = strlen(cstr);
	printf("received cstr len %d\n", yyDeliScriptLen);
	yyReadOffset = 0;
}

void readYYInput( char *buf, int *result, int max_size )
{
    int readable = max_size;
    int remaining = yyDeliScriptLen - yyReadOffset;

	if( readable > remaining )
		readable = remaining;
	for( int i=0; i < readable; i++ )
	{
		buf[i] = yyDeliScript[yyReadOffset + i];
	}
	//printf("Reading %c of %d\n", yyDeliScript[yyReadOffset], max_size);

	*result = readable;
	yyReadOffset += readable;
}

int level = 0;
void yyenter(enum DeliKind kind)
{
	level++;
	for(int i=0; i < level; i++)
		printf(" ");
	printf("> ");
	something(kind, "", 0);
}
void yyleave(enum DeliKind kind)
{
	for(int i=0; i < level; i++)
		printf(" ");
	printf("< ");
	something(kind, "", 0);
	level--;
}

#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_RedirDuplexOp(yycontext *yy); /* 60 */
YY_RULE(int) yy_RedirWriteOp(yycontext *yy); /* 59 */
YY_RULE(int) yy_RedirReadOp(yycontext *yy); /* 58 */
YY_RULE(int) yy_RedirAppendOp(yycontext *yy); /* 57 */
YY_RULE(int) yy_StreamErr(yycontext *yy); /* 56 */
YY_RULE(int) yy_StreamOut(yycontext *yy); /* 55 */
YY_RULE(int) yy_StreamIn(yycontext *yy); /* 54 */
YY_RULE(int) yy_Keyword(yycontext *yy); /* 53 */
YY_RULE(int) yy_ArgShort(yycontext *yy); /* 52 */
YY_RULE(int) yy_ArgLong(yycontext *yy); /* 51 */
YY_RULE(int) yy_JsonBlock(yycontext *yy); /* 50 */
YY_RULE(int) yy_Boolean(yycontext *yy); /* 49 */
YY_RULE(int) yy_Integer(yycontext *yy); /* 48 */
YY_RULE(int) yy_StrBlock(yycontext *yy); /* 47 */
YY_RULE(int) yy_Object(yycontext *yy); /* 46 */
YY_RULE(int) yy_Array(yycontext *yy); /* 45 */
YY_RULE(int) yy_VarDeref(yycontext *yy); /* 44 */
YY_RULE(int) yy_Arg(yycontext *yy); /* 43 */
YY_RULE(int) yy_String(yycontext *yy); /* 42 */
YY_RULE(int) yy_Invocation(yycontext *yy); /* 41 */
YY_RULE(int) yy_RedirFlag(yycontext *yy); /* 40 */
YY_RULE(int) yy_AsyncFlag(yycontext *yy); /* 39 */
YY_RULE(int) yy_ExprList(yycontext *yy); /* 38 */
YY_RULE(int) yy_Stream(yycontext *yy); /* 37 */
YY_RULE(int) yy_StrLiteral(yycontext *yy); /* 36 */
YY_RULE(int) yy_EnvDefault(yycontext *yy); /* 35 */
YY_RULE(int) yy_ArgDefault(yycontext *yy); /* 34 */
YY_RULE(int) yy_DefaultOp(yycontext *yy); /* 33 */
YY_RULE(int) yy_ArgNames(yycontext *yy); /* 32 */
YY_RULE(int) yy_ArgExpr(yycontext *yy); /* 31 */
YY_RULE(int) yy_RemoveOp(yycontext *yy); /* 30 */
YY_RULE(int) yy_AppendOp(yycontext *yy); /* 29 */
YY_RULE(int) yy_AssignOp(yycontext *yy); /* 28 */
YY_RULE(int) yy_Path(yycontext *yy); /* 27 */
YY_RULE(int) yy_RedirOp(yycontext *yy); /* 26 */
YY_RULE(int) yy_Identifier(yycontext *yy); /* 25 */
YY_RULE(int) yy_Variable(yycontext *yy); /* 24 */
YY_RULE(int) yy_Expr(yycontext *yy); /* 23 */
YY_RULE(int) yy_FunctionStmt(yycontext *yy); /* 22 */
YY_RULE(int) yy_RunStmt(yycontext *yy); /* 21 */
YY_RULE(int) yy_StreamStmt(yycontext *yy); /* 20 */
YY_RULE(int) yy_IncludeStmt(yycontext *yy); /* 19 */
YY_RULE(int) yy_EnvStmt(yycontext *yy); /* 18 */
YY_RULE(int) yy_ArgStmt(yycontext *yy); /* 17 */
YY_RULE(int) yy_CloseStmt(yycontext *yy); /* 16 */
YY_RULE(int) yy_LocalStmt(yycontext *yy); /* 15 */
YY_RULE(int) yy_AssignStmt(yycontext *yy); /* 14 */
YY_RULE(int) yy_OpenStmt(yycontext *yy); /* 13 */
YY_RULE(int) yy_Subshell(yycontext *yy); /* 12 */
YY_RULE(int) yy_Function(yycontext *yy); /* 11 */
YY_RULE(int) yy_ForLoop(yycontext *yy); /* 10 */
YY_RULE(int) yy_WhileLoop(yycontext *yy); /* 9 */
YY_RULE(int) yy_Conditional(yycontext *yy); /* 8 */
YY_RULE(int) yy_Statement(yycontext *yy); /* 7 */
YY_RULE(int) yy_Block(yycontext *yy); /* 6 */
YY_RULE(int) yy_Comment(yycontext *yy); /* 5 */
YY_RULE(int) yy_VLine(yycontext *yy); /* 4 */
YY_RULE(int) yy_Blank(yycontext *yy); /* 3 */
YY_RULE(int) yy_Code(yycontext *yy); /* 2 */
YY_RULE(int) yy_Script(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_DefaultOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_DefaultOp\n"));
  {
#line 114
   __ = something(dkDefaultOp, yytext, yyleng); yyleave(dkDefaultOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_RedirDuplexOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_RedirDuplexOp\n"));
  {
#line 113
   __ = something(dkRedirDuplexOp, yytext, yyleng); yyleave(dkRedirDuplexOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_RedirWriteOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_RedirWriteOp\n"));
  {
#line 112
   __ = something(dkRedirWriteOp, yytext, yyleng); yyleave(dkRedirWriteOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_RedirReadOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_RedirReadOp\n"));
  {
#line 111
   __ = something(dkRedirReadOp, yytext, yyleng); yyleave(dkRedirReadOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_RedirAppendOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_RedirAppendOp\n"));
  {
#line 110
   __ = something(dkRedirAppendOp, yytext, yyleng); yyleave(dkRedirAppendOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_RedirOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_RedirOp\n"));
  {
#line 109
   __ = something(dkRedirOp, yytext, yyleng); yyleave(dkRedirOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_RemoveOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_RemoveOp\n"));
  {
#line 108
   __ = something(dkRemoveOp, yytext, yyleng); yyleave(dkRemoveOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_AppendOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_AppendOp\n"));
  {
#line 107
   __ = something(dkAppendOp, yytext, yyleng); yyleave(dkAppendOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_AssignOp(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_AssignOp\n"));
  {
#line 106
   __ = something(dkAssignOp, yytext, yyleng); yyleave(dkAssignOp); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_StreamErr(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_StreamErr\n"));
  {
#line 105
   __ = something(dkStreamErr, yytext, yyleng); yyleave(dkStreamErr); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_StreamOut(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_StreamOut\n"));
  {
#line 104
   __ = something(dkStreamOut, yytext, yyleng); yyleave(dkStreamOut); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_StreamIn(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_StreamIn\n"));
  {
#line 103
   __ = something(dkStreamIn, yytext, yyleng); yyleave(dkStreamIn); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Stream(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Stream\n"));
  {
#line 102
   __ = something(dkStream, yytext, yyleng); yyleave(dkStream); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Boolean(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Boolean\n"));
  {
#line 101
   __ = something(dkBoolean, yytext, yyleng); yyleave(dkBoolean); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Keyword(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Keyword\n"));
  {
#line 100
   __ = something(dkKeyword, yytext, yyleng); yyleave(dkKeyword); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Variable(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Variable\n"));
  {
#line 99
   __ = something(dkVariable, yytext, yyleng); yyleave(dkVariable); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Path(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Path\n"));
  {
#line 98
   __ = something(dkPath, yytext, yyleng); yyleave(dkPath); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Integer(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Integer\n"));
  {
#line 97
   __ = something(dkInteger, yytext, yyleng); yyleave(dkInteger); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_String(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_String\n"));
  {
#line 96
   __ = something(dkString, yytext, yyleng); yyleave(dkString); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_StrLiteral(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_StrLiteral\n"));
  {
#line 95
   __ = something(dkStrLiteral, yytext, yyleng); yyleave(dkStrLiteral); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_StrBlock(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_StrBlock\n"));
  {
#line 94
   __ = something(dkStrBlock, yytext, yyleng); yyleave(dkStrBlock); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_JsonBlock(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_JsonBlock\n"));
  {
#line 93
   __ = something(dkJsonBlock, yytext, yyleng); yyleave(dkJsonBlock); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Identifier(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Identifier\n"));
  {
#line 92
   __ = something(dkIdentifier, yytext, yyleng); yyleave(dkIdentifier); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Object(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Object\n"));
  {
#line 91
   __ = something(dkObject, yytext, yyleng); yyleave(dkObject); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Array(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Array\n"));
  {
#line 90
   __ = something(dkArray, yytext, yyleng); yyleave(dkArray); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_ArgLong(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_ArgLong\n"));
  {
#line 89
   __ = something(dkArgLong, yytext, yyleng); yyleave(dkArgLong); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_ArgShort(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_ArgShort\n"));
  {
#line 88
   __ = something(dkArgShort, yytext, yyleng); yyleave(dkArgShort); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_Arg(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_Arg\n"));
  {
#line 87
   __ = something(dkArg, yytext, yyleng); yyleave(dkArg); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_ArgNames(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_ArgNames\n"));
  {
#line 86
   __ = something(dkArgNames, yytext, yyleng); yyleave(dkArgNames); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
